Logo and some spacing issues

--- a/assets/src/styles/components/_header.scss
+++ b/assets/src/styles/components/_header.scss
@@ -22,6 +22,7 @@
 	.hm-logo {
 		border: none;
 		display: block;
+		display: none;
 		width: 210px;
 		height: 40px;
 		margin: calc( ( #{ $base-line-height * 2 } - 40px ) / 2 ) auto;
@@ -42,7 +43,10 @@
 		@include font-heading;
 		@include text-sm;
 		color: $white;
-		text-align: center;
+		// text-align: center;
+		margin-top: 30px;
+		margin-left: 30px;
+		font-size: 1rem;
 		position: relative;
 	}
 
